--- a/Part11/Enumerables/Enumerables/Enumerables.csproj
+++ b/Part11/Enumerables/Enumerables/Enumerables.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Animal.cs" />
     <Compile Include="AnimalFarm.cs" />
+    <Compile Include="Box.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
